+Video ice nature

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -10,7 +10,7 @@
   overflow: hidden;
 }
 
-.content-wrapper {
+.home-section .content-wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
